# calculator_pkg_ex_pydev

./: README.md  calculator,py  pyproject.toml  tox.ini
calculator_pkg_ex_pydev/: __main__.py  calculator.py
calculator_pkg_ex_pydev/file_calculator/: file_calculator.py
calculator_pkg_ex_pydev/tests/: test_calculator.py  test_file_calculator.py
scripts/: run.py
